# Akemi

./: .dockerignore  .gitignore  .golangci.yml  ARCHITECTURE.md  COMMANDS.md  Dockerfile  README.md  akemi.conf.example  build.ps1  docker-compose.yml  go.mod  go.sum  installer.sh
.github/workflows/: ci.yml
Akemi-Spear/: Cargo.toml  README.md  build.rs
Akemi-Spear/src/: banner_grabber.rs  host_discovery.rs  main.rs  models.rs  rate_limiter.rs  resume.rs  scanner.rs  syn_scanner.rs  tech_detect.rs
DotHound/: .gitignore  Cargo.toml  README.md
DotHound/src/: auth_engine.rs  ca.rs  capture.rs  cli.rs  error.rs  lib.rs  main.rs  proxy.rs  report.rs  stdin.rs  stdin_part1.rs  types.rs
cmd/Akemi/: Akemi.go  password.go
config/: proxy.txt.example
internal/agent/: agent.go
internal/app/: app.go
internal/archive/: archive.go
internal/assistant/: history.go  session.go
internal/config/: config.go
internal/core/: context.go  errors.go  interfaces.go  paths.go  types.go
internal/dothound/: dothound.go  export.go  types.go
internal/engagement/: engagement.go  state.go
internal/exploit/: exploitdb.go
internal/fuzz/: fuzzer.go  mutations.go
internal/llm/: errors.go  openai_compatible.go  types.go
internal/mcp/: protocol.go  server.go  transport.go
internal/mcpclient/: router.go
internal/persist/: persist.go
internal/project/: manifest.go  paths.go  project.go  registry.go
internal/recon/: jsanalyzer.go  jsanalyzer_test.go  ports.go  portscan.go  subenum.go  surface_discovery.go  surface_discovery_test.go  webdiscovery.go
internal/reportfiles/: reportfiles.go
internal/reporting/: deps.go  deps.go.1975688519811677913  graphgen.go  reporting.go  reporting_test.go
internal/service/: discovery.go  reporting.go  scanner.go  subdomain.go  vuln.go
internal/session/: state.go
internal/surface/: full_surface.go
internal/toolbridge/: bridge.go
internal/tui/: tui.go
internal/vuln/: fingerprint.go  prioritize.go  templateengine.go  templateengine_test.go  vulnprobs.go  vulnprobs.go.3478291295740728537  vulnprobs.go.4414559614616249864  vulnutils.go
probes/auth/: idor.yml  jwt-weaknesses.yml
probes/client-side/: clickjacking.yml  cors.yml  csrf-detection.yml  open-redirect-advanced.yml  open-redirect.yml  xss-dom.yml  xss-reflected.yml
probes/custom/: _custom-cve.yml  _custom-deserialization.yml  _template.yml
probes/cve/: apache-traversal.yml  (+2 more)
(+90 files in other folders)
