[package]
name = "Akemi-Spear"
version = "0.1.0"
edition = "2021"
description = "High-performance port scanner engine for Akemi"
authors = ["Wired & Fuwa"]

[features]
default = []
syn-scan = ["pnet"]
tls-native = ["tokio-native-tls", "native-tls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = { version = "0.35", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
rand = "0.9"
regex = "1"
log = "0.4"
env_logger = "0.11"
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
lto = true
strip = true
