[package]
name = "Akemi-Spear"
version = "0.2.0"
edition = "2021"
description = "High-performance port scanner engine for Akemi"
authors = ["Wired & Fuwa"]
license = "Proprietary"
repository = "https://github.com/X-Wired/Akemi"

[[bin]]
name = "Akemi-Spear"
path = "src/main.rs"

[features]
default = []
syn-scan = ["pnet"]

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = { version = "0.35", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
rand = "0.9"
regex = "1"
log = "0.4"
env_logger = "0.11"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
dns-lookup = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
